extension UIIdentifier {
    public enum KeyImport {
        public static let screen = "remote.keyImport"
        public static let headline = "remote.keyImport.headline"
        public static let paste = "remote.keyImport.paste"
        public static let file = "remote.keyImport.file"
        public static let fingerprint = "remote.keyImport.fingerprint"
        public static let algorithm = "remote.keyImport.algorithm"
        public static let passphrase = "remote.keyImport.passphrase"
        public static let save = "remote.keyImport.save"
        public static let discard = "remote.keyImport.discard"
        public static let saved = "remote.keyImport.saved"
    }
}
